[package]
name = "mc-protocol"
version = "0.1.0"
authors = ["Terminator <terminator@nonexistent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
steven = ["steven_protocol", "serde_json"]

[dependencies]
byteorder = "1.4.3"
steven_protocol = {optional = true, git = "https://github.com/TerminatorNL/stevenarella.git", rev="7e3c2dc21315e5333799ac133900b85583c7e185"}
steven_shared = {optional = true, git = "https://github.com/TerminatorNL/stevenarella.git", rev="7e3c2dc21315e5333799ac133900b85583c7e185"}
serde_json = {optional = true, version = "1.0"}